// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnlockTokensTotal > should render 1`] = `
<DocumentFragment>
  <div
    class="mt-4 flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Total Amount
      </p>
      <div
        class="css-1v19423"
        color="success"
      >
        <div
          class="flex space-x-1 items-stretch"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            + 10 LSK
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-end"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Transaction Fee
      </p>
      <div
        class="css-148b4hi"
        color="danger"
      >
        <div
          class="flex space-x-1 items-stretch"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            - 8 LSK
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensTotal > should render loading 1`] = `
<DocumentFragment>
  <div
    class="mt-4 flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Total Amount
      </p>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 60px; height: 28px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="flex flex-col items-end"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Transaction Fee
      </p>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 60px; height: 28px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensTotal > should render loading fee 1`] = `
<DocumentFragment>
  <div
    class="mt-4 flex items-center justify-between"
  >
    <div
      class="flex flex-col items-start"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Total Amount
      </p>
      <div
        class="css-1v19423"
        color="success"
      >
        <div
          class="flex space-x-1 items-stretch"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            + 10 LSK
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-end"
      data-testid="UnlockTokensTotal"
    >
      <p
        class="mb-2 text-sm font-semibold text-theme-secondary-500"
      >
        Transaction Fee
      </p>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 60px; height: 28px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;
